--- a/first-app/src/app/observables/observers-container/observers-container.component.html
+++ b/first-app/src/app/observables/observers-container/observers-container.component.html
@@ -1,2 +1,17 @@
 <h1>Observables</h1>
-<app-observer></app-observer>
+<table>
+    <tr>
+        <td>            
+            <app-observer></app-observer>
+        </td>
+        <td>            
+            <app-observer></app-observer>
+        </td>
+        <td>            
+            <app-observer></app-observer>
+        </td>
+        <td>            
+            <app-observer></app-observer>
+        </td>
+    </tr>
+</table>
