Aggiornato app container

--- a/first-app/src/app/subject/subject-container/subject-container.component.html
+++ b/first-app/src/app/subject/subject-container/subject-container.component.html
@@ -1,1 +1,5 @@
-<p>subject-container works!</p>
+<app-subject-emitter></app-subject-emitter>
+<hr>
+<app-subject-receiver-a></app-subject-receiver-a>
+<hr>
+<app-subject-receiver-b></app-subject-receiver-b>
