Completato esercizio Subject

--- a/first-app/src/app/subject/subject-emitter/subject-emitter.component.html
+++ b/first-app/src/app/subject/subject-emitter/subject-emitter.component.html
@@ -1,1 +1,4 @@
-<p>subject-emitter works!</p>
+<h2>Emitter</h2>
+<button (click)="registraLog('premuto bottone 1')">Premi botton 1</button>
+<button (click)="registraLog('premuto bottone 2')">Premi botton 2</button>
+<button (click)="registraLog('premuto bottone 3')">Premi botton 3</button>
