--- a/first-app/src/app/subject/subject-receiver-a/subject-receiver-a.component.html
+++ b/first-app/src/app/subject/subject-receiver-a/subject-receiver-a.component.html
@@ -1,1 +1,3 @@
-<p>subject-receiver-a works!</p>
+<h2>Receiver A</h2>
+<p><button (click)="salva()">Salvare i log presenti</button></p>
+<p>{{messaggioLog}}</p>
