--- a/spotify/src/app/main/main.component.html
+++ b/spotify/src/app/main/main.component.html
@@ -15,6 +15,14 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="credits">Credits</a>
           </li>
+          <li class="nav-item">
+            @if(loggedIn) {
+              <button class="nav-link" (click)="logout()">Logout</button>
+            }
+            @else {
+              <a class="nav-link" routerLink="login">Login</a>
+            }
+          </li>
         </ul>
       </div>
     </div>
